this is sign log commit

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -13,6 +13,12 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "socket.io.client",
+               "socket.io.parser",
+              "debug"
+            ],
+
             "outputPath": "dist/frontend",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -123,5 +129,8 @@
       }
     }
   },
-  "defaultProject": "frontend"
+  "defaultProject": "frontend",
+  "cli": {
+    "analytics": "6600801a-29ea-4bfc-bb05-681434d3c8be"
+  }
 }
