--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
+    "multer": "^1.4.2",
+    "muter": "^0.7.0",
+    "sharp": "^0.26.2",
     "validator": "^13.1.17"
   },
   "devDependencies": {
