--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,16 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "countries-and-timezones": "^2.3.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
     "multer": "^1.4.2",
     "muter": "^0.7.0",
+    "node-fetch": "^2.6.1",
+    "request": "^2.88.2",
     "sharp": "^0.26.2",
+    "unirest": "^0.6.0",
     "validator": "^13.1.17"
   },
   "devDependencies": {
