--- a/backend/package.json
+++ b/backend/package.json
@@ -10,20 +10,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bad-words": "^3.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "countries-and-timezones": "^2.3.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.2",
     "mongoose": "^5.10.9",
     "multer": "^1.4.2",
     "muter": "^0.7.0",
     "node-fetch": "^2.6.1",
+    "password-hash": "^1.2.2",
     "request": "^2.88.2",
     "sharp": "^0.26.2",
+    "socket.io": "^2.3.0",
+    "socketio-auth": "^0.1.1",
     "unirest": "^0.6.0",
-    "validator": "^13.1.17"
+    "validator": "^13.1.17",
+    "yargs": "^16.1.0"
   },
   "devDependencies": {
     "bcrypt": "^5.0.0",
