--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "~10.1.3",
     "@angular/cdk": "^10.2.2",
     "@angular/common": "~10.1.3",
@@ -20,8 +21,13 @@
     "@angular/material": "^10.2.2",
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
+    "@angular/platform-server": "^10.2.0",
     "@angular/router": "~10.1.3",
     "angularx-social-login": "^3.2.2",
+    "country-state-city": "^1.0.5",
+    "file-saver": "^2.0.2",
+    "ngx-google-places-autocomplete": "^2.0.4",
+    "places.js": "^1.19.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.1",
     "zone.js": "~0.10.2"
